@@ -1,13 +1,7 @@
 name: 'Metatag: Open Graph'
 type: module
 description: Provides support for Open Graph Protocol meta tags.
-# core: 8.x
+core: 8.x
 package: SEO
 dependencies:
   - metatag
-
-# Information added by Drupal.org packaging script on 2016-05-14
-version: '8.x-1.0-beta8'
-core: '8.x'
-project: 'metatag'
-datestamp: 1463224448
