@@ -1,13 +1,7 @@
-name: Metatag: Verification
+name: 'Metatag: Verification'
 type: module
 description: Verifies ownership of a site for search engines and other services.
-# core: 8.x
+core: 8.x
 package: SEO
 dependencies:
   - metatag
-
-# Information added by Drupal.org packaging script on 2016-05-14
-version: '8.x-1.0-beta8'
-core: '8.x'
-project: 'metatag'
-datestamp: 1463224448
