@@ -2,13 +2,7 @@ name: 'Metatag test'
 type: module
 description: 'Provides support for metatag tests.'
 package: Testing
-# version: VERSION
-# core: 8.x
+version: VERSION
+core: 8.x
 dependencies:
   - metatag
-
-# Information added by Drupal.org packaging script on 2016-05-14
-version: '8.x-1.0-beta8'
-core: '8.x'
-project: 'metatag'
-datestamp: 1463224448
