@@ -1,3 +1,9 @@
+Metatag 8.x-1.x-dev, xxxx-xx-xx
+-------------------------------
+#2725895 by DamienMcKenna: Fixed the name of the Validation submodule to avoid
+  YAML validation errors. Yes, somewhat ironic.
+
+
 Metatag 8.x-1.0-beta8, 2016-05-14
 ---------------------------------
 #2723319 by itmaybejj: Fixed misspelling of 'its'.
